--- a/style.css
+++ b/style.css
@@ -1,87 +1,98 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    min-height: 100vh;
-    display: grid;
-    place-items: center ;
-    padding: 1rem;
-    background: #272a37;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  padding: 1rem;
+  background: #272a37;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 form {
-    width: 100%;
-    max-width: 30rem;
+  width: 100%;
+  max-width: 30rem;
 }
 
-label, input, textarea, button {
-    display: block;
+label,
+input,
+textarea,
+button {
+  display: block;
 }
 
-input, textarea, button {
-    width: 100%;
-    font: inherit;
-    padding: 1.25rem;
-    font-weight: 700;
+input,
+textarea,
+button {
+  width: 100%;
+  font: inherit;
+  padding: 1.25rem;
+  font-weight: 700;
 }
 
-input, textarea {
-    margin-bottom: 1rem;
-    color: white;
-    background-color: #323644;
-    border: 0.125rem solid transparent;
-    border-radius: 1.125rem;
-    transition: border-color 0.3, box-shadow 0.3s;
+input,
+textarea {
+  margin-bottom: 1rem;
+  color: white;
+  background: #323644;
+  border: 0.125rem solid transparent;
+  border-radius: 1.125rem;
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-input:hover, input:focus, textarea:hover, textarea:focus {
-    outline: none;
-    border-color: #1d90f5;
-    box-shadow: 0 0 0 0.3125rem #26344a;
+input:hover,
+input:focus,
+textarea:hover,
+textarea:focus {
+  outline: none;
+  border-color: #1d90f5;
+  box-shadow: 0 0 0 0.3125rem #26344a;
 }
 
 label {
-    margin-bottom: 0.5rem;
-    color: #84868f;
+  margin-bottom: 0.5rem;
+  color: #84868f;
 }
 
-textarea{
-    min-height: 12.5rem;
-    resize: vertical;
+textarea {
+  min-height: 12.5rem;
+  resize: vertical;
 }
 
 button {
-    border: none;
-    border-radius: 99px;
-    color: white;
-    background: #1d90f5;
-    cursor: pointer;
-    transition: 0.3s;
+  border: none;
+  border-radius: 99px;
+  color: white;
+  background: #1d90f5;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
-button:hover, button:focus {
-    outline: none;
-    background: #555b69;
+button:hover,
+button:focus {
+  outline: none;
+  background: #1c70d3;
 }
 
 button:disabled {
-    cursor: not-allowed;
-    background: #555b69;
+  cursor: not-allowed;
+  background: #555b69;
 }
 
-.sucess, .error {
-    text-align: center;
+.success,
+.error {
+  text-align: center;
 }
 
-.sucess {
-    color: greenyellow;
+.success {
+  color: greenyellow;
 }
 
 .error {
-    color: tomato;
+  color: tomato;
 }
